# simple-cdcl

./: LICENSE  README.md  analysis.ipynb  cnf.py  minisat  output.txt  pyproject.toml  run.sh  teste.txt
benchmarks/results/: output.csv
benchmarks/sat/: toy.cnf
benchmarks/sat/uf100-430/: uf100-0100.cnf  uf100-0111.cnf  uf100-0112.cnf  uf100-0118.cnf  uf100-0120.cnf  uf100-0121.cnf  uf100-0122.cnf  uf100-0125.cnf  uf100-0130.cnf  uf100-0131.cnf  uf100-0137.cnf  uf100-0139.cnf  uf100-0140.cnf  uf100-0141.cnf  uf100-0147.cnf  uf100-0154.cnf  uf100-0155.cnf  uf100-0161.cnf  uf100-0164.cnf  uf100-0165.cnf  uf100-0167.cnf  uf100-0174.cnf  uf100-0176.cnf  uf100-0188.cnf  uf100-0194.cnf  uf100-0195.cnf  uf100-0197.cnf  uf100-0199.cnf  uf100-0200.cnf  uf100-0201.cnf  uf100-0213.cnf  uf100-0214.cnf  uf100-0218.cnf  uf100-022.cnf  uf100-0226.cnf  uf100-0227.cnf  uf100-0230.cnf  uf100-0236.cnf  uf100-0241.cnf  uf100-0244.cnf  (+188 more)
benchmarks/sat/uf20-91/: uf20-0107.cnf  uf20-0108.cnf  uf20-011.cnf  uf20-0111.cnf  uf20-0115.cnf  uf20-0116.cnf  uf20-0125.cnf  uf20-0126.cnf  uf20-0130.cnf  uf20-0131.cnf  uf20-0133.cnf  uf20-0135.cnf  uf20-0138.cnf  uf20-0139.cnf  uf20-0141.cnf  uf20-0144.cnf  uf20-0145.cnf  uf20-015.cnf  uf20-0152.cnf  uf20-0155.cnf  uf20-0158.cnf  uf20-0159.cnf  uf20-0162.cnf  uf20-0165.cnf  uf20-0169.cnf  (+215 more)
benchmarks/unsat/: toy.cnf
examples/other/: gpt1.cnf  gpt2.cnf  gpt3.cnf  gpt4.cnf  sample.cnf  unsat.cnf  unsat2.cnf  zebra2.cnf
examples/sat/: toy.cnf
examples/unknown/: 1.cnf
examples/unsat/: toy.cnf
src/: cdcl.py  helpers.py  main.py  parser.py
(+4761 files in other folders)
