[project]
name = "simple-cdcl"
version = "0.1.0"
description = "A simple implementation of the Conflict-Driven Clause Learning (CDCL) framework for solving SAT problems. This project was developed as part of the course Theory and Practice of SMT Solving at UFMG."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = []
authors = [{name = "Vinicius Gomes", email = "vinicius.svgomes@gmail.com"}]
maintainers = [{name = "Vinicius Gomes", email = "vinicius.svgomes@gmail.com"}]

[project.urls]
Repository = "https://github.com/vinisilvag/simple-cdcl.git"
